refactor: limpeza de código nos services e aplicação de @Transactional